Auth updates
